--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="container header">
       <a href="./">
         <img src="img/bikcraft.svg" alt="Bikcraft">
       </a>
@@ -29,7 +29,7 @@
     </div>
   </header>
   <main class="introducao-bg">
-    <div class="introducao">
+    <div class="container introducao">
       <div class="introducao-conteudo">
         <h1 class="font-1-xxl cor-0">Biciclteas feitas sob medida<span class="cor-p1">.</span></h1>
         <p class="font-2-l cor-5">
