--- a/bicicletas.html
+++ b/bicicletas.html
@@ -16,11 +16,11 @@
   <meta name="description" content="Termos e Condições">
 </head>
 
-<body>
+<body id="bicicletas">
   <header class="header-bg">
     <div class="container header">
-      <a href="./">
-        <img src="img/bikcraft.svg" alt="Bikcraft">
+      <a href="../">
+        <img src="" alt="Bikcraft">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main id="bicicletas">
+  <main>
     <div class="titulo-bg">
       <div class="titulo container">
         <p class="font-2-l-b cor-5">Escolha a melhor pra você</p>
@@ -42,7 +42,7 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+        <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
         <span class="font-2-m cor-0">R$ 4999</span>
       </div>
       <div class="bicicletas-conteudo">
