--- a/termos.html
+++ b/termos.html
@@ -16,7 +16,7 @@
   <meta name="description" content="Termos e Condições">
 </head>
 
-<body>
+<body id="termos">
   <header class="header-bg">
     <div class="container header">
       <a href="./">
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main id="termos">
+  <main>
     <div class="titulo-bg">
       <div class="titulo container">
         <p class="font-2-l-b cor-5">Termos de uso</p>
